Added update user endpoint
